@@ -1,3 +1,7 @@
 # StoRM frontend and backend services
 storm hard nofile 8192
 storm soft nofile 8192
+
+# StoRM GridHTTPs service
+gridhttps hard nofile 65535
+gridhttps soft nofile 65535
