@@ -1,5 +1,7 @@
 #!/bin/bash
 
+BES_STORAGE_AREA=/besfs/bes
+
 if [ ! -f /etc/storm-bes/siteinfo/storm.def ]; then
     echo "Main configuration file was not found. Please run 'make-configs.sh' first"
     exit 1
@@ -10,7 +12,15 @@ if [ ! -f /etc/grid-security/hostcert.pem ] || [ ! -f /etc/grid-security/hostkey
     exit 2
 fi
 
+# Storage area permissions: set if it is already exists
+# From StoRM's guide:
+# "YAIM-StoRM doesn't set the correct permissions if the SA's root directory already exists"
+if [ -d "$BES_STORAGE_AREA" ]; then
+    chown -RL storm:storm $BES_STORAGE_AREA
+    chmod -R o-rwx,g+r $BES_STORAGE_AREA
+fi
 
-/opt/glite/yaim/bin/yaim -c -d 6 -s /etc/storm-bes/siteinfo/storm.def -n se_storm_backend -n se_storm_frontend -n se_storm_gridftp 2>&1
+
+/opt/glite/yaim/bin/yaim -c -d 6 -s /etc/storm-bes/siteinfo/storm.def -n se_storm_backend -n se_storm_frontend -n se_storm_gridftp -n se_storm_gridhttps 2>&1
 
 
