@@ -75,13 +75,21 @@ GRIDFTP_CONNECTIONS_MAX="2000"
 STORM_FE_ENABLE_VOMSCHECK=true
 STORM_FE_ENABLE_MAPPING=true
 
-STORM_FE_MONITORING_ENABLED=true
+STORM_FE_MONITORING_ENABLED=false
 #STORM_FE_MONITORING_TIME_INTERVAL=60
 #STORM_FE_MONITORING_DETAILED=false
 
 STORM_BE_XMLRPC_TOKEN="???"
 
 GLOBUS_TCP_PORT_RANGE="50000,55000"
+
+STORM_GRIDHTTPS_ENABLED=true
+STORM_GRIDHTTPS_SERVER_USER_UID=gridhttps
+STORM_GRIDHTTPS_SERVER_GROUP_UID=storm
+STORM_INFO_HTTP_SUPPORT=true
+STORM_INFO_HTTPS_SUPPORT=false
+STORM_ANONYMOUS_HTTP_READ=true
+STORM_GRIDHTTPS_HTTP_PORT=2880
 
 
 STORM_BES_ONLINE_SIZE="???"
